--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             background: radial-gradient(circle, #0f0f0f, #000); /* Fondo negro */
             color: white; /* Texto blanco */
             text-align: center;
+            background-image: url('fondo.jpg'); /* Cambia 'fondo.jpg' al nombre de tu imagen */
+            background-size: cover; /* Ajusta la imagen de fondo para cubrir toda la página */
+            background-position: center; /* Centra la imagen de fondo */
+            background-repeat: no-repeat; /* Evita que la imagen de fondo se repita */
         }
         .navbar {
             padding: 10px;
