--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="description-box">
-        <p>A wicked meme token on Solana, determined to reign supreme in the meme coin world. Join us as we unleash the dark side of crypto and carve our path to dominance. Don't miss out on the opportunity to be part of the most powerful meme coin community. Created solely for entertainment purposes with no practical utility.</p>
+        <p>A Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
     </div>
 
     <div class="logo">
