--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
             margin-right: 20px;
             animation: jump 1s infinite alternate; /* Animación de salto */
         }
+        .extra-image {
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 20px;
+            margin-right: 20px;
+            /* Ajusta el tamaño de la imagen según el ancho del logo */
+            width: 200px;
+            height: auto;
+        }
         @keyframes jump {
             0% {
                 transform: translateY(0); /* Inicio: no se mueve */
@@ -96,11 +105,16 @@
     </div>
 
     <div class="description-box">
-        <p>A Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
+        <p>Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
     </div>
 
     <div class="logo">
         <img src="logo1.png" alt="EvilPawsCoin Logo" width="200px">
+    </div>
+
+    <!-- Agrega la siguiente imagen debajo del logo -->
+    <div class="dogs">
+        <img src="dogs.png" alt="Extra Image" width="200px">
     </div>
 
     <div class="roadmap-container">
