--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             width: 200px;
             height: auto;
         }
+        .title-image {
+            display: block;
+            margin: 0 auto;
+            margin-top: 20px;
+            width: 200px; /* Ancho igual al del logo */
+            height: auto; /* Altura automática para mantener la proporción */
+        }
         @keyframes jump {
             0% {
                 transform: translateY(0); /* Inicio: no se mueve */
@@ -114,10 +121,13 @@
         <img src="logo1.png" alt="EvilPawsCoin Logo" width="200px">
     </div>
 
-    <!-- Agrega la siguiente imagen debajo del logo -->
+    <!-- Agrega la imagen adicional debajo del logo -->
     <div class="dogs">
-        <img src="dogs.png" alt="Dogs Image" width="200px">
+        <img src="dogs.png" alt="Extra Image" width="200px">
     </div>
+
+    <!-- Agrega la imagen de título centrada -->
+    <img src="evilpaws.png" alt="EvilPawsCoin Title" class="title-image">
 
     <div class="roadmap-container">
         <div class="roadmap-step">
@@ -130,4 +140,12 @@
         </div>
         <div class="roadmap-step">
             <h2>Phase 3: Development</h2>
-            <p>
+            <p>Continue development of the EvilPawsCoin ecosystem, including additional features and utilities.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        © 2024 EvilPawsCoin. All rights reserved.
+    </div>
+</body>
+</html>
