--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
         }
         .title-image {
             display: block;
-            margin: 0 auto;
-            margin-top: 20px;
-            width: 200px; /* Ancho igual al del logo */
+            margin: 20px auto; /* Centra la imagen horizontalmente */
+            width: 400px; /* Duplica el ancho de la imagen */
             height: auto; /* Altura automática para mantener la proporción */
         }
         @keyframes jump {
@@ -121,13 +120,13 @@
         <img src="logo1.png" alt="EvilPawsCoin Logo" width="200px">
     </div>
 
-    <!-- Agrega la imagen adicional debajo del logo -->
+    <!-- Agrega la imagen de título centrada -->
+    <img src="evilpaws.png" alt="EvilPawsCoin Title" class="title-image">
+
+    <!-- Agrega la imagen adicional debajo del título -->
     <div class="dogs">
         <img src="dogs.png" alt="Extra Image" width="200px">
     </div>
-
-    <!-- Agrega la imagen de título centrada -->
-    <img src="evilpaws.png" alt="EvilPawsCoin Title" class="title-image">
 
     <div class="roadmap-container">
         <div class="roadmap-step">
