--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         .title-image {
             display: block;
             margin: 20px auto; /* Centra la imagen horizontalmente */
-            width: 400px; /* Duplica el ancho de la imagen */
+            width: 400px; /* Ancho igual al del logo */
             height: auto; /* Altura automática para mantener la proporción */
         }
         @keyframes jump {
@@ -107,6 +107,9 @@
     </style>
 </head>
 <body>
+    <!-- Agrega la imagen de título centrada en la parte superior -->
+    <img src="evilpaws.png" alt="EvilPawsCoin Title" class="title-image">
+
     <div class="navbar">
         <a href="#" class="button">Tokenomics</a>
         <a href="#" class="button">Roadmap</a>
@@ -120,10 +123,7 @@
         <img src="logo1.png" alt="EvilPawsCoin Logo" width="200px">
     </div>
 
-    <!-- Agrega la imagen de título centrada -->
-    <img src="evilpaws.png" alt="EvilPawsCoin Title" class="title-image">
-
-    <!-- Agrega la imagen adicional debajo del título -->
+    <!-- Agrega la imagen adicional debajo del logo -->
     <div class="dogs">
         <img src="dogs.png" alt="Extra Image" width="200px">
     </div>
