--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         .navbar {
             padding: 10px;
             text-align: center;
+            margin-top: 10px; /* Ajusta el margen superior */
         }
         .button {
             display: inline-block;
@@ -64,7 +65,7 @@
         }
         .title-image {
             display: block;
-            margin: 20px auto; /* Centra la imagen horizontalmente */
+            margin: 10px auto; /* Centra la imagen horizontalmente y reduce la distancia */
             width: 400px; /* Ancho igual al del logo */
             height: auto; /* Altura automática para mantener la proporción */
         }
