--- a/index.html
+++ b/index.html
@@ -131,16 +131,26 @@
 
     <div class="roadmap-container">
         <div class="roadmap-step">
-            <h2>Phase 1: Launch</h2>
-            <p>Launch the EvilPawsCoin token and distribute it to initial holders.</p>
+            <h2>Phase 1:</h2>
+            <p>Token launch
+° 500 users on Telegram
+° First partnership
+° Listing on CoinGecko</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 2: Community Building</h2>
-            <p>Engage with the community through social media, community events, and partnerships.</p>
+            <h2>Phase 2:</h2>
+            <p>1000 users on Telegram
+° Listing on CoinMarketCap
+° Additional partnerships
+° Marketing campaign initiation
+° First centralized exchange listing</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 3: Development</h2>
-            <p>Continue development of the EvilPawsCoin ecosystem, including additional features and utilities.</p>
+            <h2>Phase 3:</h2>
+            <p>Further centralized exchange listings
+° Marketing to attract other communities
+° NFT minting
+° First blockchain game launch</p>
         </div>
     </div>
 
