--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             color: white; /* Texto blanco */
             text-align: justify; /* Justificar el texto */
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
-            width: 60%;
+            width: 50%; /* Reducir el ancho del cuadro de descripción */
         }
         .logo {
             display: inline-block;
@@ -132,25 +132,25 @@
     <div class="roadmap-container">
         <div class="roadmap-step">
             <h2>Phase 1:</h2>
-            <p>Token launch
-° 500 users on Telegram
-° First partnership
-° Listing on CoinGecko</p>
+            <p>- Token launch</p>
+            <p>- 500 users on Telegram</p>
+            <p>- First partnership</p>
+            <p>- Listing on CoinGecko</p>
         </div>
         <div class="roadmap-step">
             <h2>Phase 2:</h2>
-            <p>1000 users on Telegram
-° Listing on CoinMarketCap
-° Additional partnerships
-° Marketing campaign initiation
-° First centralized exchange listing</p>
+            <p>- 1000 users on Telegram</p>
+            <p>- Listing on CoinMarketCap</p>
+            <p>- Additional partnerships</p>
+            <p>- Marketing campaign initiation</p>
+            <p>- First centralized exchange listing</p>
         </div>
         <div class="roadmap-step">
             <h2>Phase 3:</h2>
-            <p>Further centralized exchange listings
-° Marketing to attract other communities
-° NFT minting
-° First blockchain game launch</p>
+            <p>- Further centralized exchange listings</p>
+            <p>- Marketing to attract other communities</p>
+            <p>- NFT minting</p>
+            <p>- First blockchain game launch</p>
         </div>
     </div>
 
@@ -159,3 +159,4 @@
     </div>
 </body>
 </html>
+
