--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         .roadmap-container {
             text-align: left; /* Alineación del texto del roadmap */
             margin-top: 20px;
-            width: 50%; /* Ajuste del ancho de los recuadros del roadmap */
+            width: 35%; /* Ajuste del ancho de los recuadros del roadmap */
             margin: 20px auto; /* Centrado horizontal */
         }
         .roadmap-step {
@@ -117,7 +117,7 @@
     </div>
 
     <div class="description-box">
-        <h2>Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</h2>
+        <p>Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
     </div>
 
     <div class="logo">
