--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="description-box">
-        <p>Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
+        <p>INTRODUCING EVILPAWSCOIN – THE ULTIMATE MEME COIN ON A MISSION TO UNITE DOGECOIN, SHIBA INU, AND FLOKI COMMUNITIES INTO AN UNSTOPPABLE ALLIANCE. A TOKEN PURELY FOR AMUSEMENT, DEVOID OF PRACTICAL USE, BUT GUARANTEED TO BRING ENDLESS FUN TO THE CRYPTOVERSE.</p>
     </div>
 
     <div class="logo">
@@ -131,32 +131,34 @@
 
     <div class="roadmap-container">
         <div class="roadmap-step">
-            <h2>Phase 1:</h2>
+            <h2>Phase 1: Launch</h2>
             <p>- Token launch</p>
             <p>- 500 users on Telegram</p>
             <p>- First partnership</p>
             <p>- Listing on CoinGecko</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 2:</h2>
+            <h2>Phase 2: Community Building</h2>
             <p>- 1000 users on Telegram</p>
             <p>- Listing on CoinMarketCap</p>
-            <p>- Additional partnerships</p>
-            <p>- Marketing campaign initiation</p>
+            <p>- More partnerships</p>
+            <p>- Commencement of marketing</p>
             <p>- First centralized exchange listing</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 3:</h2>
-            <p>- Further centralized exchange listings</p>
+            <h2>Phase 3: Expansion</h2>
+            <p>- More centralized exchange listings</p>
             <p>- Marketing to attract other communities</p>
             <p>- NFT minting</p>
             <p>- First blockchain game launch</p>
         </div>
     </div>
 
+    <!-- Agrega la imagen de tokenomics -->
+    <img src="tokenomics.png" alt="Tokenomics" class="title-image">
+
     <div class="footer">
         © 2024 EvilPawsCoin. All rights reserved.
     </div>
 </body>
 </html>
-
