--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
 
     <div class="roadmap-container">
         <div class="roadmap-step">
-            <h2>Phase 1: Launch</h2>
+            <h2>Phase 1:</h2>
             <p>- Token launch</p>
             <p>- 500 users on Telegram</p>
             <p>- First partnership</p>
             <p>- Listing on CoinGecko</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 2: Community Building</h2>
+            <h2>Phase 2:</h2>
             <p>- 1000 users on Telegram</p>
             <p>- Listing on CoinMarketCap</p>
             <p>- More partnerships</p>
-            <p>- Commencement of marketing</p>
+            <p>- Marketing</p>
             <p>- First centralized exchange listing</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 3: Expansion</h2>
+            <h2>Phase 3:</h2>
             <p>- More centralized exchange listings</p>
             <p>- Marketing to attract other communities</p>
             <p>- NFT minting</p>
