--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="description-box">
-        <p>INTRODUCING EVILPAWSCOIN – THE ULTIMATE MEME COIN ON A MISSION TO UNITE DOGECOIN, SHIBA INU, AND FLOKI COMMUNITIES INTO AN UNSTOPPABLE ALLIANCE. A TOKEN PURELY FOR AMUSEMENT, DEVOID OF PRACTICAL USE, BUT GUARANTEED TO BRING ENDLESS FUN TO THE CRYPTOVERSE.</p>
+        <p>Introducing EvilPawsCoin – the ultimate meme coin on a mission to unite Dogecoin, Shiba Inu, and Floki communities into an unstoppable alliance. A token purely for amusement, devoid of practical use, but guaranteed to bring endless fun to the cryptoverse.</p>
     </div>
 
     <div class="logo">
